# defect-localisation-sbc

./: .editorconfig  .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  tasks.py
.devcontainer/: devcontainer.json
defect_localisation_sbc/: __init__.py  cli.py  functions.py  main.py
docs/: CONTRIBUTING.md  HISTORY.md  index.md
tests/: conftest.py
